# py-analytics-case-1

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pylint-analysis.yml
docs/: analytics_engineer_case.md
src/: main.py
src/core/: logger.py  utils.py
