[tool.poetry]
name = "py-analytics-case-1"
version = "0.1.0"
description = "Solução de ingestão, transformação e análise de dados para o case de Analytics Engineer."
authors = ["Raphael Coelho <raphael.phael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylint = "^3.3.2"
black = "^24.10.0"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = [
    "logging-fstring-interpolation",
    "missing-module-docstring",
    "missing-function-docstring",
    "import-error"
]
