[tool.poetry]
name = "py-analytics-case-1"
version = "0.1.0"
description = "Solução de ingestão, transformação e análise de dados para o case de Analytics Engineer."
authors = ["Raphael Coelho <raphael.phael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
dbt-postgres = "^1.9.0"
jinja2 = "^3.1.4"
pandas = "^2.2.3"
pylint = "^3.3.2"
pyyaml = "^6.0.2"
sqlalchemy = "^2.0.36"
sqlfluff = "^3.3.0"
sqlfluff-templater-dbt = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = [
    "logging-fstring-interpolation",
    "missing-module-docstring",
    "missing-function-docstring",
    "import-error"
]
